--- a/Form.html
+++ b/Form.html
@@ -40,7 +40,7 @@
 <body>
     <div>
       <div class="outer-download">
-          <div class="download-banner">
+          <div class="download-banner hide">
               <h3>Download the app</h3>
               <div class="download-banner-buttons">
                     <a href='https://itunes.apple.com/au/app/openpay/id1166424403?mt=8'><img src='./assets/images/apple.png'/></a>
@@ -64,10 +64,10 @@
                      <a href='Support.html' class='links'>Support</a>
                 </div>
                 <div class='linkDiv'>
-                     <a href='Merchants.html' class='links'>Merchants</a>
+                     <a id='download' href='#' class='links dl-app'>Download</a>
                 </div>
                 <div class='linkDiv'>
-                     <a id='download' href='#' class='links dl-app'>Download</a>
+                     <a href='Merchants.html' class='links'>Businesses</a>
                 </div>
                 <div class='hamburger hamburger-menu'>
                       <span></span>
@@ -80,7 +80,7 @@
                     <li><a href="Shop.html">Shop now</a></li>
                     <li><a href="How.html">How it works</a></li>
                     <li><a href="Support.html">Support</a></li>
-                    <li><a href="Merchants.html">Merchants</a></li>
+                    <li><a href="Merchants.html">Businesses</a></li>
                     <li><a class="dl-app" href="index.html">Download</a></li>
                   </ul>
                   <div id='open-hamburger' class='hamburger'>
@@ -106,21 +106,32 @@
                 </div>
             </div>
         </div>
-        <div class="content">
-                
+          <!-- MY FORM -->
+        <div class="content"></div>
+        <!-- MY FORM -->
 
-        </div>
-        
+        <!-- COPY AND PASTE HERE -->
+
+
+
+
+        <!-- ***** -->
+
+
+
+        <!-- COPY AND PASTE HERE -->
+
+
         <div class='footer'>
           <div class='row'>
               <div class='c12 footer-logo'>
-                  <img src='./assets/images/O.png'/>
+                  <img src='./assets/o.svg'/>
               </div>
           </div>
           <div class='row'>
               <div class='c12 footer-download'>
-                  <a href='https://itunes.apple.com/au/app/openpay/id1166424403?mt=8'><img src='./assets/images/apple.png'/></a>
-                  <a href='https://play.google.com/store/apps/details?id=com.ocean.openpay'><img src='./assets/images/android.png' /></a>
+                  <a href='https://itunes.apple.com/au/app/openpay/id1166424403?mt=8'><img src='./assets/apple.svg'/></a>
+                  <a href='https://play.google.com/store/apps/details?id=com.ocean.openpay'><img src='./assets/android.svg' /></a>
               </div>
           </div>
           <div class='footer-linkOuter'>
@@ -149,12 +160,12 @@
           </div>
           <div class='row'>
               <div class='c12 footer-legal'>
-                     <a href="#">Privacy Policy</a>
-                     <a href="#">AU Terms & Conditions</a>
-                     <a href="#">NZ Terms & Conditions</a>
+                     <a href="Privacy.html">Privacy Policy</a>
+                     <a href="Terms.html">Terms & Conditions</a>
+                    <!--  <a href="#">NZ Terms & Conditions</a>
                      <a href="#">End User License Agreement</a>
                      <a href="#">PCI Data Security Statement</a>
-                     <a href="#">Terms & Conditions Promitions</a>
+                     <a href="#">Terms & Conditions Promitions</a> -->
               </div>
           </div>
           <div class='row'>
