--- a/Support.html
+++ b/Support.html
@@ -33,14 +33,14 @@
 	})(window,document,window['_fs_namespace'],'script','user');
 </script>
 	
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300 600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
     <link rel="stylesheet" href="./css/global.css" /> 
     <link rel="stylesheet" href="./css/support.css" /> 
 </head>
 <body>
     <div>
       <div class="outer-download">
-          <div class="download-banner">
+          <div class="download-banner hide">
                 <h3>Download the app</h3>
                 <div class="download-banner-buttons">
                       <a href='https://itunes.apple.com/au/app/openpay/id1166424403?mt=8'><img src='./assets/images/apple.png'/></a>
@@ -64,10 +64,10 @@
                      <a href='Support.html' class='links'>Support</a>
                 </div>
                 <div class='linkDiv'>
-                     <a href='Merchants.html' class='links'>Merchants</a>
+                     <a id='download' href='#' class='links dl-app'>Download</a>
                 </div>
                 <div class='linkDiv'>
-                     <a href='#' class='links dl-app'>Download</a>
+                     <a href='Merchants.html' class='links'>Businesses</a>
                 </div>
                 <div class='hamburger hamburger-menu'>
                       <span></span>
@@ -80,7 +80,7 @@
                     <li><a href="Shop.html">Shop now</a></li>
                     <li><a href="How.html">How it works</a></li>
                     <li><a href="Support.html">Support</a></li>
-                    <li><a href="Merchants.html">Merchants</a></li>
+                    <li><a href="Merchants.html">Businesses</a></li>
                     <li><a class="dl-app" href="index.html">Download</a></li>
                   </ul>
                   <div  class='hamburger open open-hamburger'>
@@ -110,28 +110,30 @@
                 </div>
                 <div class='option-block'>
                     <div data='1' class='optionDiv'>
-                        <h2>Where to use</h2>
+                        <h2>Using Openpay</h2>
                     </div>
                 </div>
                 <div class='option-block'>
                     <div data='2' class='optionDiv'>
-                        <h2>App Questions</h2>
+                        <h2>Payments</h2>
                     </div>
                 </div>
                 <div class='option-block'>
                     <div data='3' class='optionDiv'>
-                        <h2>Online Issues</h2>
+                        <h2>Fees</h2>
                     </div>
                 </div>
                 <div class='option-block'>
                     <div data='4' class='optionDiv'>
-                        <h2>Contact us</h2>
+                        <h2>Cancellations/Refunds</h2>
                     </div>
                 </div>
             </div>
             <div id="help-text"></div>
             <div class='help-header'>
                 <h1>Contact Us</h1>
+                <p>Email: info@openpay.com.au<p>
+                <p>Phone: 1300 168 359 </p>
             </div>
             <!-- <div class='options'>
                 <div class='option-block'>
@@ -162,13 +164,13 @@
         <div class='footer'>
           <div class='row'>
               <div class='c12 footer-logo'>
-                  <img src='./assets/images/O.png'/>
+                  <img src='./assets/o.svg'/>
               </div>
           </div>
           <div class='row'>
               <div class='c12 footer-download'>
-                  <a href='https://itunes.apple.com/au/app/openpay/id1166424403?mt=8'><img src='./assets/images/apple.png'/></a>
-                  <a href='https://play.google.com/store/apps/details?id=com.ocean.openpay'><img src='./assets/images/android.png' /></a>
+                  <a href='https://itunes.apple.com/au/app/openpay/id1166424403?mt=8'><img src='./assets/apple.svg'/></a>
+                  <a href='https://play.google.com/store/apps/details?id=com.ocean.openpay'><img src='./assets/android.svg' /></a>
               </div>
           </div>
           <div class='footer-linkOuter'>
@@ -197,12 +199,12 @@
           </div>
           <div class='row'>
               <div class='c12 footer-legal'>
-                     <a href="#">Privacy Policy</a>
-                     <a href="#">AU Terms & Conditions</a>
-                     <a href="#">NZ Terms & Conditions</a>
+                    <a href="Privacy.html">Privacy Policy</a>
+                     <a href="Terms.html">Terms & Conditions</a>
+                  <!--    <a href="#">NZ Terms & Conditions</a>
                      <a href="#">End User License Agreement</a>
                      <a href="#">PCI Data Security Statement</a>
-                     <a href="#">Terms & Conditions Promitions</a>
+                     <a href="#">Terms & Conditions Promitions</a> -->
               </div>
           </div>
           <div class='row'>
