--- a/Merchants.html
+++ b/Merchants.html
@@ -33,14 +33,14 @@
 	})(window,document,window['_fs_namespace'],'script','user');
 </script>
 	
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300 600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
     <link rel="stylesheet" href="./css/global.css" /> 
     <link rel="stylesheet" type="text/css" href="./css/merchant.css">
 </head>
 <body>
     <div>
         <div class="outer-download">
-            <div class="download-banner">
+            <div class="download-banner hide">
                 <h3>Download the app</h3>
                 <div class="download-banner-buttons">
                       <a href='https://itunes.apple.com/au/app/openpay/id1166424403?mt=8'><img src='./assets/images/apple.png'/></a>
@@ -64,10 +64,10 @@
                      <a href='Support.html' class='links'>Support</a>
                 </div>
                 <div class='linkDiv'>
-                     <a href='Merchants.html' class='links'>Merchants</a>
+                     <a id='download' href='#' class='links dl-app'>Download</a>
                 </div>
                 <div class='linkDiv'>
-                     <a id='download ' href='#' class='links dl-app'>Download</a>
+                     <a href='Merchants.html' class='links'>Businesses</a>
                 </div>
                 <div class='hamburger hamburger-menu'>
                       <span></span>
@@ -80,7 +80,7 @@
                     <li><a href="Shop.html">Shop now</a></li>
                     <li><a href="How.html">How it works</a></li>
                     <li><a href="Support.html">Support</a></li>
-                    <li><a href="Merchants.html">Merchants</a></li>
+                    <li><a href="Merchants.html">Businesses</a></li>
                     <li><a class='dl-app' href="index.html">Download</a></li>
                   </ul>
                   <div class='hamburger open open-hamburger'>
@@ -91,81 +91,131 @@
                 </div>
             </div>
         </div>
-        <div class='hero-gradient-header merchant-gradient'>
-            <div class='c2'></div>
-            <div class='c10'>
-              <h1>A finance option for them, a sales<br> opportunity for you.</h1>
-              <p>Give your existing and future customers a welcome change to pay their way. We guarentee uplift in sales online and instore</p>
-              <a class='apply' href="Form.html">Apply now</a>
-            </div>
-        </div>
-        <div class="content">
-            <div class="row">
-                <div class="c12 why-header">
-                    <h1>Why Use Openpay</h1>
-                </div>
-            </div>
-            <div class='row icon-bubbles'>
-                <div class='block'>
-                    <div class='iconTitle'>
-                        <div class='iconBorder'>
-                          <img src='./assets/images/icon_IncreaseATV.png' class='icon'/>
-                        </div>
-                        <h3>Increase ATV & conversion</h3>
-                    </div>
-                    <div class='text'>
-                        <p>Consumers are more comfortable spending more when they have more time to pay and no scary interest.</p>
-                    </div>
-                </div>
-                <div class='block'>
-                    <div class='iconTitle'>
-                        <div class='iconBorder'>
-                          <img src='./assets/images/icon_NewCustomers.png' class='icon'/>
-                        </div>
-                        <h3>Gain new customers</h3>
-                    </div>
-                    <div class='text'>
-                        <p>Our extensive database delivers cross sell opportunities and customers who prefer using Openpay</p>
-                    </div>
-                </div>
-                <div class='block'>
-                    <div class='iconTitle'>
-                        <div class='iconBorder'>
-                          <img src='./assets/images/icon_Shield.png' class='icon'/>
-                        </div>
-                        <h3>Zero Risk</h3>
-                    </div>
-                    <div class='text'>
-                        <p>We pay you the next business day in full, less our fee, which helps your case flow management.</p>
-                    </div>
-                </div>
-                <div class='block'>
-                    <div class='iconTitle'>
-                        <div class='iconBorder'>
-                          <img src='./assets/images/icon_Secure.png' class='icon'/>
-                        </div>
-                        <h3>Secure</h3>
-                    </div>
-                    <div class='text'>
-                        <p>PCI Data Security compliant as a Level 1 Service Provider.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row atv-container">
-                <div class="c6 atv-info">
-                    <h1>Longer terms. Higher ATV.</h1>
+        <div class="curve-hero">
+            <div class="header-info">
+                <div class="testbox">
+                    <h1>A finance option for them, a sales<br> opportunity for you.</h1>
                     <p>Give your existing and future customers a welcome change to pay their way. We guarentee uplift in sales online and instore</p>
-                    <div class="rectangle-row">
-                        <p class="standard-rec">Standard ATV</p>
-                        <p class="increase-rec">ATV increase with Openpay</p>
-                    </div>
-                </div>
-                <div class="c6 graph-image">
-                    <img class='graph' src='./assets/images/Graph.png'/>
+                    <a class='apply' href="Form.html">Apply now</a>
                 </div>
             </div>
         </div>
-        <div class="grey-content">
+        <div class="grizzy-grey">
+            <div class="content">
+                <div class="row">
+                    <div class="c12 why-header">
+                        <h1>Why Use Openpay</h1>
+                    </div>
+                </div>
+                <div class='row icon-bubbles'>
+                    <div class='block'>
+                        <div class='iconTitle'>
+                            <div class='iconBorder'>
+                              <img src='./assets/images/icon_IncreaseATV.png' class='icon'/>
+                            </div>
+                            <h3>Increase ATV & conversion</h3>
+                        </div>
+                        <div class='text'>
+                            <p>Consumers are more comfortable spending more when they have more time to pay and no scary interest.</p>
+                        </div>
+                    </div>
+                    <div class='block'>
+                        <div class='iconTitle'>
+                            <div class='iconBorder'>
+                              <img src='./assets/images/icon_NewCustomers.png' class='icon'/>
+                            </div>
+                            <h3>Gain new customers</h3>
+                        </div>
+                        <div class='text'>
+                            <p>Our extensive database delivers cross sell opportunities and customers who prefer using Openpay</p>
+                        </div>
+                    </div>
+                    <div class='block'>
+                        <div class='iconTitle'>
+                            <div class='iconBorder'>
+                              <img src='./assets/images/icon_Shield.png' class='icon'/>
+                            </div>
+                            <h3>Zero Risk</h3>
+                        </div>
+                        <div class='text'>
+                            <p>We pay you the next business day in full, less our fee, which helps your case flow management.</p>
+                        </div>
+                    </div>
+                    <div class='block'>
+                        <div class='iconTitle'>
+                            <div class='iconBorder'>
+                              <img src='./assets/images/icon_Secure.png' class='icon'/>
+                            </div>
+                            <h3>Secure</h3>
+                        </div>
+                        <div class='text'>
+                            <p>PCI Data Security compliant as a Level 1 Service Provider.</p>
+                        </div>
+                    </div>
+                </div>
+                  <div class="row atv-container">
+                      <div class="c6 atv-info">
+                          <h1>Longer terms. Higher ATV.</h1>
+                          <p>Give your existing and future customers a welcome change to pay their way. We guarentee uplift in sales online and instore</p>
+                          <div class="rectangle-row">
+                              <p class="standard-rec">Standard ATV</p>
+                              <p class="increase-rec">ATV increase with Openpay</p>
+                          </div>
+                      </div>
+                      <div class="c6 graph-image">
+                          <img class='graph' src='./assets/images/Graph.png'/>
+                      </div>
+                </div>
+                <div class="row bubble-row">
+                    <div class="c7">
+                        <div class="bub-con">
+                            <div class="grow">
+                                <div class="big-bubble">
+                                  <h1>+120% ATV Increase</h1>
+                                </div>
+                            </div>
+                            <div class="grow">
+                                <div class="big-bubble">
+                                    <h1>77% Repeat Cusomers</h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="c5">
+                          <div class="case-con">
+                              <h1>Womens fashion case study</h1>
+                              <a href="#">View Case Study</a>
+                          </div>
+                    </div>
+                </div>
+                <div class="row">
+                      <div class="c12">
+                            <div class="extra-info">
+                                <h1>Trusted By</h1>
+                                <p>We partner with some of the biggest brands in the country across a range of industries including home improvement, healthcare,retail,automotive and more.</p>
+                            </div>
+                      </div>
+                </div>
+                <div class="brands-row">
+                      <div class="ahg bgbrand"></div>
+                      <div class="hs bgbrand"></div>
+                      <div class="nik bgbrand"></div>
+                      <div class="ts bgbrand"></div>
+                      <div class="eg bgbrand"></div>
+                      <div class="msp bgbrand"></div>
+                </div>
+            </div>
+            <div class="row everywhere-container">
+                <div class="c6 graph-image">
+                    <img class='everywhere-image' src='./assets/images/everywhere1.png'/>
+                </div>
+                <div class="c6 everywhere-info">
+                    <h1>Everywhere your customers are.</h1>
+                    <p>Increase your ATV instore with the Openpay app and online with the Openpay hosted checkout. Market to them through our marketing. EDM's and app notifications</p>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="grey-content">
             <div class="row case-study-row">
                 <div class="c6 case-study">
                     <p class="blue">CASE STUDY</p>
@@ -203,23 +253,15 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row image-hero-row">
+        </div> -->
+        <!-- <div class="row image-hero-row">
             <div class="hero-text-box">
                 <h2>Openpay has allowed us to surpass targets. Our customers simply spend more when offered longer terms.</h2>
                 <p>Steven Lew- Founder, CEO GRB</p>
             </div>
-        </div>
-        <div class="content">
-            <div class="row everywhere-container">
-                <div class="c6 graph-image">
-                    <img class='everywhere-image' src='./assets/images/everywhere1.png'/>
-                </div>
-                <div class="c6 everywhere-info">
-                    <h1>Everywhere your customers are.</h1>
-                    <p>Increase your ATV instore with the Openpay app and online with the Openpay hosted checkout. Market to them through our marketing. EDM's and app notifications</p>
-                </div>
-            </div>
+        </div> -->
+       <!--  <div class="content">
+            
         </div>
         <div class="navy-content">
             <div class="row">
@@ -273,7 +315,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="content">
             <div class="row">
                 <div class="c12 why-header">
@@ -294,13 +336,13 @@
         <div class='footer'>
           <div class='row'>
               <div class='c12 footer-logo'>
-                  <img src='./assets/images/O.png'/>
+                  <img src='./assets/o.svg'/>
               </div>
           </div>
           <div class='row'>
               <div class='c12 footer-download'>
-                  <a href='https://itunes.apple.com/au/app/openpay/id1166424403?mt=8'><img src='./assets/images/apple.png'/></a>
-                  <a href='https://play.google.com/store/apps/details?id=com.ocean.openpay'><img src='./assets/images/android.png' /></a>
+                  <a href='https://itunes.apple.com/au/app/openpay/id1166424403?mt=8'><img src='./assets/apple.svg'/></a>
+                  <a href='https://play.google.com/store/apps/details?id=com.ocean.openpay'><img src='./assets/android.svg' /></a>
               </div>
           </div>
           <div class='footer-linkOuter'>
@@ -329,12 +371,12 @@
           </div>
           <div class='row'>
               <div class='c12 footer-legal'>
-                     <a href="#">Privacy Policy</a>
-                     <a href="#">AU Terms & Conditions</a>
-                     <a href="#">NZ Terms & Conditions</a>
+                     <a href="Privacy.html">Privacy Policy</a>
+                     <a href="Terms.html">Terms & Conditions</a>
+                     <!-- <a href="#">NZ Terms & Conditions</a>
                      <a href="#">End User License Agreement</a>
                      <a href="#">PCI Data Security Statement</a>
-                     <a href="#">Terms & Conditions Promitions</a>
+                     <a href="#">Terms & Conditions Promitions</a> -->
               </div>
           </div>
           <div class='row'>
