--- a/How.html
+++ b/How.html
@@ -199,16 +199,16 @@
             <h1>Featured offers</h1>
         </div>
         <div class='featured-tiles tile-slider'>
+            <a href="#"><img src='./assets/images/edge-linen.png'/></a>
+            <a href="#"><img src='./assets/images/Pet-house-halloween.png'/></a>
+            <a href="#"><img src='./assets/images/Robins-halloween.png'/></a>
+            <!--<a href="#"><img src='./assets/images/Edge.png'/></a>
             <a href="#"><img src='./assets/images/Sunglasses.png'/></a>
             <a href="#"><img src='./assets/images/Edge.png'/></a>
             <a href="#"><img src='./assets/images/Sunglasses.png'/></a>
             <a href="#"><img src='./assets/images/Edge.png'/></a>
-            <a href="#"><img src='./assets/images/Sunglasses.png'/></a>
             <a href="#"><img src='./assets/images/Edge.png'/></a>
-            <a href="#"><img src='./assets/images/Sunglasses.png'/></a>
-            <a href="#"><img src='./assets/images/Edge.png'/></a>
-            <a href="#"><img src='./assets/images/Edge.png'/></a>
-            <a href="#"><img src='./assets/images/Edge.png'/></a>
+            <a href="#"><img src='./assets/images/Edge.png'/></a>--->
        </div>
         <div class='footer'>
           <div class='row'>
