--- a/index.html
+++ b/index.html
@@ -104,20 +104,20 @@
 	    	</div>
 	    </div>
 		<div class='row tile-block remove-line featured-title'>
-	        <h1>Featured offers</h1>
+	        <h1>Featured retailers</h1>
 	    </div>
 	    <div class='featured-tiles tile-slider'>
+	    	<a href="#"><img src='./assets/images/edge-linen.png'/></a>
+	    	<a href="#"><img src='./assets/images/Pet-house-halloween.png'/></a>
+	    	<a href="#"><img src='./assets/images/Robins-halloween.png'/></a>
+	    	<!-- <a href="#"><img src='./assets/images/Edge.png'/></a>
 	    	<a href="#"><img src='./assets/images/Sunglasses.png'/></a>
 	    	<a href="#"><img src='./assets/images/Edge.png'/></a>
 	    	<a href="#"><img src='./assets/images/Sunglasses.png'/></a>
 	    	<a href="#"><img src='./assets/images/Edge.png'/></a>
-	    	<a href="#"><img src='./assets/images/Sunglasses.png'/></a>
 	    	<a href="#"><img src='./assets/images/Edge.png'/></a>
-	    	<a href="#"><img src='./assets/images/Sunglasses.png'/></a>
-	    	<a href="#"><img src='./assets/images/Edge.png'/></a>
-	    	<a href="#"><img src='./assets/images/Edge.png'/></a>
-
-	    	<a href="#"><img src='./assets/images/Edge.png'/></a>
+			<a href="#"><img src='./assets/images/Edge.png'/></a>
+			--->
 	   </div>
 	    <!-- <div class='brand-scroll'>
     		<img src='./assets/images/jims2.png'/>
@@ -263,7 +263,7 @@
 			    </div>
 			    <div class='row tile-block retail-line'>
 			        <h2>Retail</h2>
-			        <a href='Shop.html' class='tile-link' to='#'>View All</Link>
+			        <a href='#' class='tile-link' to='#'>View All</Link>
 			    </div>
 			    <div id='retail-slide' class='tile-slider'>
 			    	<!-- <img src='./assets/images/sauna.png'/>
@@ -284,7 +284,7 @@
 			   </div>
 			   <div class='row tile-block home-line'>
 			        <h2>Home</h2>
-			        <a href='Shop.html' class='tile-link' to='#'>View All</Link>
+			        <a href='#' class='tile-link' to='#'>View All</Link>
 			    </div>
 			    <div id='home-slide' class='tile-slider'>
 			    	<!-- <img src='./assets/images/sauna.png'/>
@@ -305,7 +305,7 @@
 			   </div>
 			   <div class='row tile-block health-line'>
 			        <h2>Health</h2>
-			        <a href='Shop.html' class='tile-link' to='#'>View All</Link>
+			        <a href='#' class='tile-link' to='#'>View All</Link>
 			    </div>
 			    <div id='health-slide' class='tile-slider'>
 			    	<!-- <img src='./assets/images/sauna.png'/>
@@ -326,7 +326,7 @@
 			   </div>
 			   <div class='row tile-block auto-line'>
 			        <h2>Automotive</h2>
-			        <a href='Shop.html' class='tile-link' to='#'>View All</Link>
+			        <a href='#' class='tile-link' to='#'>View All</Link>
 			    </div>
 			    <div id='automotive-slide' class='tile-slider'>
 			    	<!-- <img src='./assets/images/sauna.png'/>
