--- a/Merchants.html
+++ b/Merchants.html
@@ -96,7 +96,10 @@
                 <div class="testbox">
                     <h1>A finance option for them, a sales<br> opportunity for you.</h1>
                     <p>Give your existing and future customers a welcome change to pay their way. We guarentee uplift in sales online and instore</p>
-                    <a class='apply' href="Form.html">Apply now</a>
+                    <div class="inline">   
+                        <a class='apply' href="Form.html">Apply now</a>
+                        <a class='apply-signup' href="https://retailer.myopenpay.com.au/live/Account/Login/">Sign in</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -190,7 +193,10 @@
                 </div>
                 <div class="row">
                       <div class="c12">
-                            <div class="extra-info">
+                            <div class="extra-info" style="
+                                    max-width: 1097px;
+                                    text-align: center;
+                                    padding-bottom: 55px;">
                                 <h1>Trusted By</h1>
                                 <p>We partner with some of the biggest brands in the country across a range of industries including home improvement, healthcare,retail,automotive and more.</p>
                             </div>
