--- a/Locations.html
+++ b/Locations.html
@@ -138,7 +138,7 @@
          <div class='footer'>
           <div class='row'>
               <div class='c12 footer-logo'>
-                  <img src='./assets/images/O.png'/>
+                  <img src='./assets/o.svg'/>
               </div>
           </div>
           <div class='row'>
