--- a/Support.html
+++ b/Support.html
@@ -95,7 +95,7 @@
             <div class="header-info">
                 <div class="testbox">
                     <h1>We're here for you.</h1>
-                    <p>Need help? Call us on 1300 168 359. For general inquiries, Read our FAQs below. For any addition queries, fill in the relevant contact form and we will get in touch.</p>
+                    <p>Need help? Call us on 1300 168 359. For general inquiries, read our FAQs below. For any addition queries, fill in the relevant contact form and we will get in touch.</p>
                 </div>
             </div>
         </div>
