--- a/How.html
+++ b/How.html
@@ -170,7 +170,7 @@
                 <div class="c6 how-info-box">
                     <h1>Every step of the way.</h1>
                     <p class="special">You're in control, but we've got your back.</p>
-                    <p>Once you've made your purchase you can manage your plan and payments in the app. Keep using Openpay's to manage your cashflow in every aspect of your life.</p>
+                    <p>Once you've made your purchase you can manage your plan and payments in the app. Keep using Openpay to manage your cashflow in every aspect of your life.</p>
                 </div>
                 <div class="c3"></div>
             </div>
