--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -39,11 +39,11 @@
 <body>
     <div class="mainContent">
 		<div class="topNav">
-			<a class="mainLogo" href="#"></a>
-			<a href="#">Shop now</a>
-			<a href="#">How it works</a>
-			<a href="#">I'm a business</a>
-			<a class="active" href="#">Help & contact</a>
+			<a class="mainLogo" href="/"></a>
+			<a href="shop.html">Shop now</a>
+			<a href="how.html">How it works</a>
+			<a href="business.html">I'm a business</a>
+			<a href="help.html">Help & contact</a>
 			<div class="topNavRight">
 				<a href="#">Merchant log in</a>
 			</div>
@@ -56,10 +56,10 @@
 				<span></span>
 				<span></span>
 				<ul>
-					<a href="#"><li>shop now</li></a>
-					<a href="#"><li>How it works</li></a>
-					<a href="#"><li>I'm a business</li></a>
-					<a href="#"><li>Help & contact</li></a>
+					<a href="shop.html">Shop now</a>
+					<a href="how.html">How it works</a>
+					<a href="business.html">I'm a business</a>
+					<a href="help.html">Help & contact</a>
 					<br>
 					<a href="#"><li>Merchant log in</li></a>
 
@@ -67,7 +67,18 @@
 			</div>
 		</nav>
 
+		<div class="heroHomeContainer">
+			<div class="greyWithOpacity"></div>
+			<div class="heroInfo">
+				<h1>Buy now, pay smarter for your . . .</h1>
+				<div class="typeBox">
+					<h1 id='rotating-words' class="txt-rotate" data-period="2000" data-rotate='[ "car services", "glasses","new tyres","dog beds","fresh sheets","physio","bed","cat toys","blender","tents","trampoline","vet bills","new dress","sofa","vacuum","sneakers","toaster","camping gear","activewear", "window tinting","pots and pans","waffle maker" ]'></h1>
+				</div>
+				<div class="btnBox"><a href="Shop.html">Shop all stores</a></div>
+			</div>
+		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="scripts/Typer.js"></script>
 </body>
 </html>
