--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -56,10 +56,10 @@
 				<span></span>
 				<span></span>
 				<ul>
-					<a href="shop.html">Shop now</a>
-					<a href="how.html">How it works</a>
-					<a href="business.html">I'm a business</a>
-					<a href="help.html">Help & contact</a>
+					<a href="shop.html"><li>Shop now</li></a>
+					<a href="how.html"><li>How it works</li></a>
+					<a href="business.html"><li>I'm a business</li></a>
+					<a href="help.html"><li>Help & contact</li></a>
 					<br>
 					<a href="#"><li>Merchant log in</li></a>
 
